--- a/src/app/componentes/notfound-page/notfound-page.component.html
+++ b/src/app/componentes/notfound-page/notfound-page.component.html
@@ -1,3 +1,11 @@
-<p>
-  notfound-page works!
-</p>
+<div class="row mt-3">
+  <div class="col-md-6 mx-auto text-center">
+    <div class="card">
+      <h1>Oooops!</h1>
+      <h2>Pagina no encontrada..</h2>
+      <div class="card-body">
+        <a href="/" class="btn btn-primary btn-lg"><i class="fa fa-home"></i>Ir al inicio</a>
+      </div>
+    </div>
+  </div>
+</div>
